[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
  {name = "Peter G. Chang", email = "peter0414@gmail.com"},
  {name = "Keyon Vafa"}
]
dependencies = [
  "chex>=0.1.86",
  "flax>=0.8.0",
  "jax>=0.4.21",
  "jaxlib>=0.4.21",
  "jax-tqdm>=0.1.0",
  "matplotlib>=3.8.2",
  "numpy==2.0",
  "optax>=0.1.7",
  "optuna>=3.6.1",
  "pandas>=2.1.3",
  "pydantic",
  "pytorch-lightning",
  "seaborn>=0.13.0",
  "torch",
  "tqdm>=4.66.1",
  "transformers",
  "wandb"
]
description = "Transformer World Model Discovery for Planetary Orbits"
dynamic = ["version"]
name = "planetworldmodel"
requires-python = ">=3.10.6"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "refurb",
  "ruff",
  "ipykernel",
  "pylint",
  "pytest"
]

[project.urls]
issues = "https://github.com/mitmullalab/planetworldmodel/issues"
repository = "https://github.com/mitmullalab/planetworldmodel"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]

[tool.pylint.messages_control]
disable = [
  "invalid-name",
  "missing-docstring",
  "too-many-arguments",
  "too-many-lines",
  "too-many-locals"
]

[tool.setuptools_scm]
version_file = "version.py"
